--- a/style/style.css
+++ b/style/style.css
@@ -24,3 +24,9 @@ input:focus {
 tfoot input {
   border: 1px solid #000;
 }
+
+.system__message {
+  font-family: 'Trebuchet MS', Arial, sans-serif;
+  font-size: 12px;
+  color: red;
+}
