--- a/style/style.css
+++ b/style/style.css
@@ -25,8 +25,12 @@ tfoot input {
   border: 1px solid #000;
 }
 
-.system__message {
-  font-family: 'Trebuchet MS', Arial, sans-serif;
-  font-size: 12px;
+span {
   color: red;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+span.system__message {
+  opacity: 1;
 }
